fix highlighted cards alignment

--- a/aksel.nav.no/website/app/dev/(root)/_ui/frontpage.module.css
+++ b/aksel.nav.no/website/app/dev/(root)/_ui/frontpage.module.css
@@ -168,6 +168,10 @@
   margin-bottom: var(--ax-space-40);
 }
 
+.highlight {
+  align-content: flex-start;
+}
+
 .highlightSection {
   display: grid;
   align-content: flex-start;
